--- a/recipes/templates/results.html
+++ b/recipes/templates/results.html
@@ -27,7 +27,7 @@
         {% endfor %}
         {% else %}
         <div class="col-12">
-            <p>Welcome!!!</p>
+            <p>Search for a recipe to get started.</p>
         </div>
         {% endif %}
     </div>
