--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -9,7 +9,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body class="container mt-5 bg-dark text-light">
+<body class="container mt-5 bg-light">
     
     {% block content %}
     {% endblock %}
