--- a/recipes/templates/form.html
+++ b/recipes/templates/form.html
@@ -7,7 +7,7 @@
         <div class="col-md-8 offset-md-2">
             <form method="get" action="{% url 'search_recipes' %}" class="d-flex">
                 <input type="text" name="q" placeholder="Search ..." class="form-control me-2" aria-label="Search">
-                <button type="submit" class="btn btn-secondary">Search</button>
+                <button type="submit" class="btn btn-warning">Search</button>
             </form>
         </div>
     </div>
