--- a/recipes/templates/form.html
+++ b/recipes/templates/form.html
@@ -2,12 +2,15 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h1 class="text-center mb-4">Recipe Finder</h1>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1 class="text-center">Recipe Finder</h1>
+        <a href="{% url 'home' %}" class="btn btn-outline-primary btn-sm rounded-pill">Home</a>
+    </div>
     <div class="row">
         <div class="col-md-8 offset-md-2">
             <form method="get" action="{% url 'search_recipes' %}" class="d-flex">
                 <input type="text" name="q" placeholder="Search ..." class="form-control me-2" aria-label="Search">
-                <button type="submit" class="btn btn-warning">Search</button>
+                <button type="submit" class="btn btn-outline-secondary">Search</button>
             </form>
         </div>
     </div>
